tests/src/frontend/typechecking/exhaustiveness/invalid/nested_consts.sk
const MyConst: Bool = true;
fun test(): String {
  (true, true) match {
  | (MyConst, MyConst) -> "Fail\n"
  | (MyConst, false) -> "Fail\n"
  }
}
